GNOME Bugzilla – Bug 715051
Unable to create OpenSSH keypairs.
Last modified: 2013-12-08 21:33:10 UTC
originally reported downstream at https://bugzilla.novell.com/show_bug.cgi?id=851050 """ Creating OpenSSH-keypairs with Seahorse fails with the error "open (null) failed: Permission denied" ** (seahorse:29653): CRITICAL **: on_generate_complete: assertion 'SEAHORSE_IS_SSH_KEY (closure->key)' failed System used is openSUSE 13.1 Final with all patches applied to date and GNOME as the default desktop. Creating a keypair from the shell using ssh-keygen works flawless. Reproducible: Always Steps to Reproduce: 1. Open Seahorse 2. Create a new OpenSSH keypair by clicking the plus-button and selecting "Secure Shell Key" followed by clicking "Continue" 3. Add your mail-address at the description keys, leave "Advanced Key Options" as-is 4. Click "Create and Setup" 5a. Enter a keyphrase 5b. Enter no keyphrase Actual Results: Key-generation fails with the error "open (null) failed: Permission denied" "'"
I traced this already a bit further: a 'very' stupid error it seems: the files ((null) and (null.pub) are created in $PWD => for normal launch this is likely /usr/bin, hence no permission. if it were anywhere else on the disk, then it would 'create' the keypair, but obviously not usable. (can be verified by running seahorse in a terminal after having entered ~/.ssh for example; then you can even create 1 key; limited to one, because the filename remains (null) and (null).pub)
*** Bug 715053 has been marked as a duplicate of this bug. ***
Created attachment 261283 [details] [review] Fix SSH key generation
(In reply to comment #3) > Created an attachment (id=261283) [details] [review] > Fix SSH key generation I applied this patch on my local source tree and re-tested. Works!
Attachment 261283 [details] pushed as f3452d1 - Fix SSH key generation