Fix SSH key generation

Here, i used to be a guint, but was recently changed into a gint to
silence a compiler warning. This caused the for loop to terminate
without ever iterating.

https://bugzilla.gnome.org/show_bug.cgi?id=715051